--- a/src/assets/styles/header/mobile-menu.scss
+++ b/src/assets/styles/header/mobile-menu.scss
@@ -8,7 +8,7 @@
   height: auto;
   opacity: 0;
   visibility: hidden;
-  z-index: 1000;
+  z-index: $z-index-lg;
   background-color: var(--color-mobile-menu-background);
   transition: opacity $transition-duration ease, visibility $transition-duration ease;
 
