--- a/src/assets/styles/variables/_fonts.scss
+++ b/src/assets/styles/variables/_fonts.scss
@@ -23,7 +23,7 @@ $font-family-main: "Blogger Sans", "Arial", sans-serif;
   --font-menu-contacts: var(--font-body-bold);
 
   //Footer
-  --font-footnote__text: var(--font-body-regular);
+  --font-footnote-text: var(--font-body-regular);
 }
 
 // Адаптивные изменения для планшетов //надо будет перенастроить фонты будут первым этапом
